# ukw_tools

./: .bumpversion..cfg  .bumpversion.cfg  .scutinizer.yml  README.md  asdasd.bumpversion..cfg  requirements.txt  setup.cfg  setup.py  xxx.bumpversion.cfg
src/ukw_tools/ai_vision/: utils.py
src/ukw_tools/classes/: __init__.py  annotation.py  data_gen.py  data_gen_tests.py  db.py  evaluator.py  examination.py  examiner.py  image.py  instance.py  model_handler.py  prediction.py  report.py  streamlit_report.py  test_data_gen.py  video_segmentation.py
src/ukw_tools/dataset/: image_classification.py  utils.py
src/ukw_tools/labels/: utils.py
src/ukw_tools/media/: image.py  screen_examination.py  text.py  video.py
src/ukw_tools/model/: predict.py
src/ukw_tools/plot/: utils.py
src/ukw_tools/stats/: utils.py
src/ukw_tools/wt/: utils.py
tests/: dev.ipynb  test_intervention.py
