[metadata]
name = ukw_tools
version = 0.0.1
author = Thomas J. Lux
author_email = tlux14@gmail.com
description = Package all around AI in colonoscopy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maddonix/ukw_tools
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[bumpversion]
current_version = 0.0.1
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = 
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]
